customising tmux config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,14 +14,14 @@ setw -g automatic-rename off
 setw -g aggressive-resize on
 
 # Change prefix key to C-a, easier to type, same to "screen"
-unbind C-b
-set -g prefix C-a
+#unbind C-b
+#set -g prefix C-a
 
 # Set parent terminal title to reflect current window in tmux session 
 set -g set-titles on
 set -g set-titles-string "#I:#W"
 
-# Start index of window/pane with 1, because we're humans, not computers
+# Start index of window/pane with 1, because 0 is the wrong end of the keyboard
 set -g base-index 1
 setw -g pane-base-index 1
 
@@ -34,29 +34,29 @@ set -g mouse on
 # ==========================
 
 # Unbind default key bindings, we're going to override
-unbind "\$" # rename-session
-unbind ,    # rename-window
-unbind %    # split-window -h
-unbind '"'  # split-window
-unbind }    # swap-pane -D
-unbind {    # swap-pane -U
-unbind [    # paste-buffer
-unbind ]    
-unbind "'"  # select-window
-unbind n    # next-window
-unbind p    # previous-window
-unbind l    # last-window
-unbind M-n  # next window with alert
-unbind M-p  # next window with alert
-unbind o    # focus thru panes
-unbind &    # kill-window
-unbind "#"  # list-buffer 
-unbind =    # choose-buffer
-unbind z    # zoom-pane
-unbind M-Up  # resize 5 rows up
-unbind M-Down # resize 5 rows down
-unbind M-Right # resize 5 rows right
-unbind M-Left # resize 5 rows left
+#unbind "\$" # rename-session
+#unbind ,    # rename-window
+#unbind %    # split-window -h
+#unbind '"'  # split-window
+#unbind }    # swap-pane -D
+#unbind {    # swap-pane -U
+#unbind [    # paste-buffer
+#unbind ]    
+#unbind "'"  # select-window
+#unbind n    # next-window
+#unbind p    # previous-window
+#unbind l    # last-window
+#unbind M-n  # next window with alert
+#unbind M-p  # next window with alert
+#unbind o    # focus thru panes
+#unbind &    # kill-window
+#unbind "#"  # list-buffer 
+#unbind =    # choose-buffer
+#unbind z    # zoom-pane
+#unbind M-Up  # resize 5 rows up
+#unbind M-Down # resize 5 rows down
+#unbind M-Right # resize 5 rows right
+#unbind M-Left # resize 5 rows left
 
 
 # Edit configuration and reload
